pagination IE issue

--- a/less/pagination-controls.less
+++ b/less/pagination-controls.less
@@ -15,7 +15,7 @@
     .uw-content .pagination-wrapper{
         display: block;
         right: 0;
-        margin-top: 20px;
+        margin-top: 40px;
     }
         
 }
